Bug 282280 - crash upon removing bluetooth device
Summary: crash upon removing bluetooth device
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-18 14:10 UTC by doodoon
Modified: 2011-10-07 23:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description doodoon 2011-09-18 14:10:26 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.6.5 (4.6.5)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-11-generic i686
Distribution: Ubuntu 11.04

-- Information about the crash:
- What I was doing when the application crashed:
switched off and then removed phycally the bluetooth usb-device

-- Backtrace:
Application: KDE Daemon (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb7825b60 (LWP 2184))]

Thread 4 (Thread 0xb1cbbb70 (LWP 2193)):
#0  0x07edae4b in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0x07edb524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0x00d35577 in QEventDispatcherGlib::processEvents (this=0xa0c8910, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#3  0x00d07289 in QEventLoop::processEvents (this=0xb1cbb1e0, flags=...) at kernel/qeventloop.cpp:149
#4  0x00d07522 in QEventLoop::exec (this=0xb1cbb1e0, flags=...) at kernel/qeventloop.cpp:201
#5  0x00c112a0 in QThread::exec (this=0xa0c8488) at thread/qthread.cpp:492
#6  0x00ce8fdb in QInotifyFileSystemWatcherEngine::run (this=0xa0c8488) at io/qfilesystemwatcher_inotify.cpp:248
#7  0x00c13da2 in QThreadPrivate::start (arg=0xa0c8488) at thread/qthread_unix.cpp:320
#8  0x04ecf28d in ?? () from /usr/lib/nvidia-current/libGL.so.1
#9  0x02d8473e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 3 (Thread 0xb14bab70 (LWP 2267)):
#0  0x007fad98 in pthread_getspecific@plt () from /usr/lib/i386-linux-gnu/libgthread-2.0.so.0
#1  0x007fbd75 in ?? () from /usr/lib/i386-linux-gnu/libgthread-2.0.so.0
#2  0x07f05482 in g_thread_self () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x07ed9572 in g_main_context_acquire () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x07edadde in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x07edb92b in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#6  0x02f77304 in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#7  0x07f042df in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x04ecf28d in ?? () from /usr/lib/nvidia-current/libGL.so.1
#9  0x02d8473e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 2 (Thread 0xacaffb70 (LWP 20312)):
#0  0x07eda6f4 in g_main_context_check () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0x07edb03a in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0x07edb524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x00d35577 in QEventDispatcherGlib::processEvents (this=0xa2801a0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00d07289 in QEventLoop::processEvents (this=0xacaff1f0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00d07522 in QEventLoop::exec (this=0xacaff1f0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00c112a0 in QThread::exec (this=0xa03b9b0) at thread/qthread.cpp:492
#7  0x02504f36 in ?? () from /usr/lib/kde4/kded_bluedevil.so
#8  0x00c13da2 in QThreadPrivate::start (arg=0xa03b9b0) at thread/qthread_unix.cpp:320
#9  0x04ecf28d in ?? () from /usr/lib/nvidia-current/libGL.so.1
#10 0x02d8473e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb7825b60 (LWP 2184)):
[KCrash Handler]
#7  hash (key=...) at tools/qhash.cpp:81
#8  qHash (key=...) at tools/qhash.cpp:95
#9  0x038b8d32 in ?? () from /usr/lib/kde4/kded_obexftpdaemon.so
#10 0x038b10e2 in ObexFtpDaemon::offlineMode() () from /usr/lib/kde4/kded_obexftpdaemon.so
#11 0x038b1728 in ObexFtpDaemon::defaultAdapterChanged(BlueDevil::Adapter*) () from /usr/lib/kde4/kded_obexftpdaemon.so
#12 0x038af757 in ObexFtpDaemon::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/kde4/kded_obexftpdaemon.so
#13 0x00d0e6ba in QMetaObject::metacall (object=0xa013f00, cl=QMetaObject::InvokeMetaMethod, idx=14, argv=0xbfb828f8) at kernel/qmetaobject.cpp:237
#14 0x00d1e4ff in QMetaObject::activate (sender=0xa0116f0, m=0x45738a0, local_signal_index=2, argv=0xbfb828f8) at kernel/qobject.cpp:3287
#15 0x045467f3 in BlueDevil::Manager::defaultAdapterChanged(BlueDevil::Adapter*) () from /usr/lib/libbluedevil.so.1
#16 0x04547aeb in BlueDevil::Manager::Private::_k_adapterRemoved(QDBusObjectPath const&) () from /usr/lib/libbluedevil.so.1
#17 0x04549f98 in BlueDevil::Manager::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libbluedevil.so.1
#18 0x00d0e6ba in QMetaObject::metacall (object=0xa0116f0, cl=QMetaObject::InvokeMetaMethod, idx=10, argv=0xbfb82a68) at kernel/qmetaobject.cpp:237
#19 0x00d1e4ff in QMetaObject::activate (sender=0xacb0ca60, m=0x4573a04, local_signal_index=1, argv=0xbfb82a68) at kernel/qobject.cpp:3287
#20 0x0455def3 in ?? () from /usr/lib/libbluedevil.so.1
#21 0x0455e282 in ?? () from /usr/lib/libbluedevil.so.1
#22 0x051beacd in QDBusConnectionPrivate::deliverCall (this=0xa015450, object=0xacb0ca60, msg=..., metaTypes=..., slotIdx=6) at qdbusintegrator.cpp:942
#23 0x051c91d7 in QDBusCallDeliveryEvent::placeMetaCall (this=0xacb12a20, object=0xacb0ca60) at qdbusintegrator_p.h:103
#24 0x00d1d3b7 in QObject::event (this=0xacb0ca60, e=0xacb12a20) at kernel/qobject.cpp:1226
#25 0x00f72d24 in QApplicationPrivate::notify_helper (this=0x9f3e2a8, receiver=0xacb0ca60, e=0xacb12a20) at kernel/qapplication.cpp:4462
#26 0x00f778ce in QApplication::notify (this=0xbfb83460, receiver=0xacb0ca60, e=0xacb12a20) at kernel/qapplication.cpp:3862
#27 0x009ea32a in KApplication::notify (this=0xbfb83460, receiver=0xacb0ca60, event=0xacb12a20) at ../../kdeui/kernel/kapplication.cpp:311
#28 0x00d080bb in QCoreApplication::notifyInternal (this=0xbfb83460, receiver=0xacb0ca60, event=0xacb12a20) at kernel/qcoreapplication.cpp:731
#29 0x00d0bc79 in sendEvent (receiver=0x0, event_type=0, data=0x9e596c0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#30 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x9e596c0) at kernel/qcoreapplication.cpp:1372
#31 0x00d0be0d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1265
#32 0x00d353c4 in sendPostedEvents (s=0x9f40690) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#33 postEventSourceDispatch (s=0x9f40690) at kernel/qeventdispatcher_glib.cpp:277
#34 0x07edaaa8 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#35 0x07edb270 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#36 0x07edb524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#37 0x00d3553c in QEventDispatcherGlib::processEvents (this=0x9f1ba60, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#38 0x010291e5 in QGuiEventDispatcherGlib::processEvents (this=0x9f1ba60, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#39 0x00d07289 in QEventLoop::processEvents (this=0xbfb833c4, flags=...) at kernel/qeventloop.cpp:149
#40 0x00d07522 in QEventLoop::exec (this=0xbfb833c4, flags=...) at kernel/qeventloop.cpp:201
#41 0x00d0becc in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#42 0x00f708e7 in QApplication::exec () at kernel/qapplication.cpp:3736
#43 0x091efb50 in kdemain (argc=1, argv=0x9ef4180) at ../../kded/kded.cpp:925
#44 0x0804dc5f in launch (argc=1, _name=0x8052207 "kded4", args=<value optimized out>, cwd=0x0, envc=0, envs=<value optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x805208e "0") at ../../kinit/kinit.cpp:746
#45 0x0805085c in main (argc=) at ../../kinit/kinit.cpp:1861

Possible duplicates by query: bug 250276.

Reported using DrKonqi
Comment 1 Alex Fiestas 2011-10-07 23:39:30 UTC
Git commit 5942e191f14b08f27cdb77e9d4e91dffa1eed15e by Alex Fiestas.
Committed on 08/10/2011 at 01:36.
Pushed by afiestas into branch '1.0'.

Make sure that obexsession is not deleted

Removed waitForFinished and instead use deleteLater
BUG: 282280

M  +3    -3    src/daemon/obexftpkded/ObexFtpDaemon.cpp

http://commits.kde.org/bluedevil/5942e191f14b08f27cdb77e9d4e91dffa1eed15e
Comment 2 Alex Fiestas 2011-10-07 23:40:36 UTC
Git commit bc0068427c17928f2620613d1ef216354e657972 by Alex Fiestas.
Committed on 08/10/2011 at 01:36.
Pushed by afiestas into branch '1.1'.

Make sure that obexsession is not deleted

Removed waitForFinished and instead use deleteLater
BUG: 282280

M  +3    -3    src/daemon/obexftpkded/ObexFtpDaemon.cpp

http://commits.kde.org/bluedevil/bc0068427c17928f2620613d1ef216354e657972