Make sure that obexsession is not deleted

Removed waitForFinished and instead use deleteLater
BUG: 282280